# aspic

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: core.rs  fw.rs  lang.rs  lib.rs  parse.rs
src/core/: abst.rs  fw.rs  mod.rs  structured.rs  theory.rs
tests/: gen_arg.rs
