[package]
name = "aspic"
version = "0.1.0"
edition = "2021"
description = "An ASPIC+ argumentation system and reasoning engine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
nom = "7.1.3"
thiserror = "1.0"
itertools = "0.13.0"
