[package]
name = "aspic"
version = "0.1.1"
edition = "2021"
description = "An ASPIC+ argumentation system and reasoning engine"
license = "MIT"
repository = "https://github.com/alexjackson1/aspic/"
authors = ["Alex Jackson <mail@alexjackson.uk>"]
readme = "README.md"
keywords = ["aspic", "argumentation", "reasoning", "logic", "ai"]

[dependencies]
petgraph = { version = "0.6" }
nom = "7.1.3"
thiserror = "1.0"
itertools = "0.13.0"
futures = "0.3"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
serde_support = ["serde", "serde_derive", "petgraph/serde-1"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen"]
